@@ -1,5 +1,13 @@
 2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build] Prefer libpq headers in $(includedir)/postgresql, if available.
+
+	* libpq.c: If <postgresql/libpq-fe.h> is
+	available, #include that instead of <libpq-fe.h>;
+	likewise <postgresql/libpq/libpq-fs.h> over <libpq/libpq-fs.h>.
+
+2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int] Don't use assignment expression as ‘SCM_OPFPORTP’ arg.
 
 	* libpq.c (pg_print): Assign to local var
