@@ -1,5 +1,14 @@
 2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build] Prefer libpq headers in $(includedir)/postgresql, if available.
+
+	* configure.ac (AC_CHECK_HEADERS_ONCE): New macro call
+	for <postgresql/libpq-fe.h> and <postgresql/libpq/libpq-fs.h>;
+	if found and not overriden by env vars ‘PQ_CPPFLAGS’ and
+	‘PQ_LDFLAGS’, check for libpq.a as well, and set those vars.
+
+2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build] Decruft: Don't check some standard headers twice.
 
 	* configure.ac (AC_CHECK_HEADERS): Don't explicitly
